--- a/src/components/product-attributes-table.module.css
+++ b/src/components/product-attributes-table.module.css
@@ -1,4 +1,11 @@
-.ligne {
-    @apply border-b-2
-    
+.table {
+  @apply w-full;
+}
+
+.table td {
+  @apply border-b-2 border-gray-200 py-4;
+}
+
+.table tr:last-child td {
+  @apply border-b-0;
 }
